# mate3

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTES.txt  Pipfile  README.md  README.rst  constraints.txt  outback_mate3.py  pg_config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
doc/: general.md  troubleshooting.md
examples/: getting_started.py
examples/postgress_monitoring/: README.md  config.yaml  main.py
mate3/: __init__.py  api.py  base_definitions.py  base_parser.py  base_structures.py  code_generator.py  csv_generator.py  definitions.py  devices.py  exceptions.py  field_values.py  io.py  main.py  mate3_pg.py  mate3_write.py  modbus_client.py  outback_mate3.py  parsers.py  read.py  structures.py
mate3/examples/: getting_started.py  postgres_monitoring.py
mate3/sunspec/: fields.py  model_base.py  models.py  payload.py  values.py
mate3/sunspec/doc/: OutBack.Power.SunSpec.Map.xlsx
mate3/sunspec/scripts/: code_generator.py
mate3/tests/: test_cli.py  test_io.py  test_known_systems.py
mate3/tests/known_systems/chinezbrun/: expected.json  modbus.json
registry_data/: registry-data-page-10-table-1.csv  registry-data-page-10-table-2.csv  registry-data-page-10-table-3.csv  registry-data-page-10-table-4.csv  registry-data-page-11-table-1.csv  registry-data-page-12-table-1.csv  registry-data-page-13-table-1.csv  registry-data-page-14-table-1.csv  registry-data-page-14-table-2.csv  registry-data-page-15-table-1.csv  registry-data-page-15-table-2.csv  registry-data-page-15-table-3.csv  registry-data-page-15-table-4.csv  registry-data-page-16-table-1.csv  registry-data-page-17-table-1.csv  registry-data-page-18-table-1.csv  registry-data-page-19-table-1.csv  registry-data-page-2-table-1.csv  registry-data-page-20-table-1.csv  registry-data-page-20-table-2.csv  registry-data-page-20-table-3.csv  registry-data-page-21-table-1.csv  registry-data-page-22-table-1.csv  registry-data-page-23-table-1.csv  registry-data-page-3-table-1.csv  registry-data-page-4-table-1.csv  registry-data-page-5-table-1.csv  registry-data-page-6-table-1.csv  registry-data-page-6-table-2.csv  registry-data-page-7-table-1.csv  registry-data-page-8-table-1.csv  registry-data-page-9-table-1.csv
