[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "mate3"
readme = "README.md"
version = "0.5.0"
description = "Outback Mate3s Python Library"
authors = ["Adam Charnock <adam@adamcharnock.com>"]
homepage = "https://github.com/adamcharnock/mate3/"
repository = "https://github.com/adamcharnock/mate3/"

[tool.poetry.dependencies]
python = "^3.7"
pymodbus = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
dephell = ">=0.7.6"

[tool.poetry.scripts]
mate3 = 'mate3.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

