[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "mate3"
readme = "README.md"
version = "0.5.3"
description = "Outback Mate3s Python Library"
authors = ["Adam Charnock <adam@adamcharnock.com>", "kodonnell <kodonnell@users.noreply.github.com>"]
homepage = "https://github.com/adamcharnock/mate3/"
repository = "https://github.com/adamcharnock/mate3/"

[tool.poetry.dependencies]
python = "^3.7"
pymodbus = "^2.4"
loguru = "^0.5.3"
fixedint = "^0.1.6"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}
dephell = ">=0.7.6"
pytest = "^6.2.1"
pytest-dictsdiff = "^0.5.8"
pytest-subtests = "^0.4.0"

[tool.poetry.scripts]
mate3 = 'mate3.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
# Ignore the below error as recommended by pytest-subtests
filterwarnings = [ "ignore:A private pytest class or function was used." ]
